--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,43 @@
 .qodo
+# Dependencies
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# MongoDB
+/data/db
+
+# Angular
+/dist/
+/tmp/
+/out-tsc/
+/.angular/cache
+.sass-cache/
+connect.lock
+coverage/
+/libpeerconnection.log
+testem.log
+/typings/
+
+# Express
+/logs/
+*.log
+npm-debug.log*
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# System Files
+.DS_Store
+Thumbs.db
